# GICPwithg2o

./: README.md
g2o_coding_sample/: CMakeLists.txt  README.txt
g2o_coding_sample/data/: cloud00012.pcd  cloud00034.pcd  cloud00054.pcd
g2o_coding_sample/g2o/: CMakeLists.txt
g2o_coding_sample/g2o/g2o/core/: CMakeLists.txt
g2o_coding_sample/g2o/g2o/solvers/: CMakeLists.txt
g2o_coding_sample/g2o/g2o/stuff/: CMakeLists.txt
g2o_coding_sample/g2o/g2o/types/: CMakeLists.txt
g2o_coding_sample/g2o/g2o/types/slam3d/: CMakeLists.txt  edge_se3_prior_imu.cpp  edge_se3_prior_imu.h  parameter_se3_offset.cpp  types_slam3d.cpp  types_slam3d.h
g2o_coding_sample/src/: CMakeLists.txt  test_gicp.cpp
